# ApartmentPrice

./: .gitignore  MLProject  README.md  airflow_start.md  instructions from kama.md  pyproject.toml  requirements.txt  start.md  zenml_instruction.md  zenml_start.md
.dvc/: .gitignore  config
api/: README.md  app.py
artifacts/: README.md
configs/: ApartmentPrice.yaml  data_version.yaml  main.yaml  sample_data.yaml  test_config.yaml
docs/: airflow_instruction.md  airflow_start.md  docker_not_run.md  example_post.json  github_settings.md  mlflow_start.md  phase4.md  phase5.md  read_only_problem.md  zenml_start.md
mlruns/: README.md
models/: README.md
notebooks/: README.md  business_understanding.ipynb  my_expectation_suite  validate_data.ipynb
pipelines/: README.md  data_extract_dag.py  data_prepare_dag.py
reports/: presentation.txt  test_suite_decision_tree_regressor_v68_sample_1 (1).html  test_suite_decision_tree_regressor_v69_sample_1.html  test_suite_gradient_boosting_regressor_v84_sample_1.html
results/: README.md  reproducibility_decision_tree_regressor.txt  reproducibility_gradient_boosting_regressor.txt
scripts/: README.md  install_requirements.sh  predict_samples.sh  test_data.sh
services/: README.md
src/: README.md  app.py  app1.py  create_json.py  data.py  dummy.py  evaluate.py  main.py  model copy.py  model.py  models.py  predict.py  reproducing.py  sklearn_mlflow.py  transform.py  validate.py  validate_after_preproc.py  validate_data.py
tests/: README.md  mock_data.csv  test_Card.py  test_fixture.py  test_load_features.py  test_sum.py  (+5 more)
(+12234 files in other folders)
