[tool.poetry]
name = "apartmentprice"
version = "0.1.0"
description = "Prediction of apartment price"
authors = ["Ninel Yunusova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
dvc = "^3.51.2"
dvc-gdrive = "^3.0.1"
pandas = "^2.2.2"
numpy = "<2.0.0"
scipy = "^1.11.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = "^1.5.0"
category-encoders = "^2.6.3"
hydra-core = "^1.3.2"
pytest = "^8.2.2"
great-expectations = "^0.18.16"
zenml = {extras = ["server"], version = "^0.50.0"}
apache-airflow = { extras = ["cncf.kubernetes"], version = "2.7.3" }
flask-session2 = "^1.3.1"
psycopg2-binary = "^2.9.9"
gensim = "4.3.2"
mlflow = "^2.14.3"
torch = "^2.3.1"
torchvision = "^0.18.1"
torchaudio = "^2.3.1"
skorch = "^1.0.0"
giskard = "2.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
